Finalizacion de Bitacora de Reporte Page

--- a/app-scr/angular.json
+++ b/app-scr/angular.json
@@ -32,12 +32,16 @@
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
+             
               "budgets": [
                 {
                   "type": "initial",
@@ -47,7 +51,7 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumError": "2MB"
                 }
               ],
               "outputHashing": "all"
@@ -98,5 +102,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "6d03f29b-1830-4f6d-b0e3-8c0aa1963784"
   }
 }
