--- a/api-scr/.env.example
+++ b/api-scr/.env.example
@@ -1,19 +1,26 @@
 APP_NAME=Lumen
-APP_ENV=local
+APP_ENV=prod
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://pdfgenerator-gruposcr.jadeandru.com
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=lake-7040.banahosting.com
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=ihzpafph_wp259
+DB_USERNAME=ihzpafph_user
+DB_PASSWORD=5erte34?CRH
+
+FPDF_VAPOR_HEADERS=true
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+FTP_HOST=ftp.grupo-scr.mx
+FTP_USER=grupo-scr@survey.grupo-scr.mx
+FTP_PASSWORD=oWTCj16Nre(T
+FTP_PORT=21
