--- a/app-scr/package.json
+++ b/app-scr/package.json
@@ -28,6 +28,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lz-string": "^1.5.0",
+    "ng2-pdf-viewer": "^10.4.0",
     "ngx-quill": "^27.0.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.15.10",
